# cartalog

./: README.md
server/: .gitignore  pyproject.toml
server/cartalog_server/dao/: __init__.py  manager.py
server/cartalog_server/dao/parts/: category_dao.py
server/cartalog_server/data/classes/: __init__.py  immutable.py
server/cartalog_server/domain/: __init__.py  category.py
server/resources/sql/: schema.sql
